// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpinionProjectRow /> should render close collapse 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={false}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="https://www.jobteaser.com/fr/companies/sii/newsfeed/recruitment-12945-qu-est-ce-qu-un-fungenieur"
          id="profile-project-link-project1"
          title="Création du statut de Fungénieur"
        >
          Création du statut de Fungénieur
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project1"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    />
  </Uncontrolled(Panel)>
</Collapse>
`;

exports[`<OpinionProjectRow /> should render the project 1 with its proposal displayed 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={true}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="https://www.jobteaser.com/fr/companies/sii/newsfeed/recruitment-12945-qu-est-ce-qu-un-fungenieur"
          id="profile-project-link-project1"
          title="Création du statut de Fungénieur"
        >
          Création du statut de Fungénieur
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project1"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    >
      <ForwardRef(Relay(OpinionRow))
        key="0"
        opinion={
          Object {
            "id": "opinion1",
            "project": Object {
              "id": "project1",
            },
            "show_url": "https://www.2rconsulting.fr/",
            "title": "Recrutez Hervé !",
          }
        }
      />
      <ForwardRef(Relay(OpinionRow))
        key="1"
        opinion={
          Object {
            "id": "opinion2",
            "project": Object {
              "id": "project1",
            },
            "show_url": "https://www.2rconsulting.fr/",
            "title": "Virer Julie",
          }
        }
      />
    </ListGroup>
  </Uncontrolled(Panel)>
</Collapse>
`;

exports[`<OpinionProjectRow /> should render the project 2 with its proposal displayed 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project2"
  in={true}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="http://theuselessweb.com"
          id="profile-project-link-project2"
          title="Se perdre sur internet"
        >
          Se perdre sur internet
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project2"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    >
      <ForwardRef(Relay(OpinionRow))
        key="0"
        opinion={
          Object {
            "id": "opinion3",
            "project": Object {
              "id": "project2",
            },
            "show_url": "https://www.2rconsulting.fr/",
            "title": "Faire des sessions de recrutement basé sur la destruction des autres parce que cest comme ça le monde du travail.",
          }
        }
      />
    </ListGroup>
  </Uncontrolled(Panel)>
</Collapse>
`;
